md-settings: add routing to chrome://settings/triggeredResetProfileSettings

Adds the triggered veriant of the reset settings dialog in md-settings
and adds a URL alias for it.

BUG=636408
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2371303002
Cr-Commit-Position: refs/heads/master@{#424794}

Former-commit-id: 4f9795e4f49c40f5a7cc8c6a619539ca71999551